--- a/k8s/petclinic-chart/templates/hystrix_server_deployment.yaml
+++ b/k8s/petclinic-chart/templates/hystrix_server_deployment.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  grafana-server
+  name:  hystrix-server
   labels:
-    app:  grafana-server
+    app:  hystrix-server
 spec:
   selector:
     matchLabels:
-      app: grafana-server
+      app: hystrix-server
   replicas: 1
   template:
     metadata:
       labels:
-        app:  grafana-server
+        app:  hystrix-server
     spec:
       initContainers:
       - name: init-discovery-server
         image: busybox
         command: ['sh', '-c', 'until nc -z discovery-server:8761; do echo waiting for discovery-server; sleep 2; done;']
       containers:
-      - name:  grafana-server
-        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:grafana-server-b4"
+      - name:  hystrix-server
+        image:  {{ .Values.IMAGE_TAG_HYSTRIX_DASHBOARD }}
         ports:
-        - containerPort:  3000
+        - containerPort:  7979
       imagePullSecrets:
       - name: regcred
