--- a/k8s/petclinic-chart/templates/admin_server_deployment.yaml
+++ b/k8s/petclinic-chart/templates/admin_server_deployment.yaml
@@ -20,7 +20,7 @@ spec:
         command: ['sh', '-c', 'until nc -z discovery-server:8761; do echo waiting for discovery-server; sleep 2; done;']
       containers:
       - name:  admin-server
-        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:admin-server-b5"
+        image:  {{ .Values.IMAGE_TAG_ADMIN_SERVER }}
         ports:
         - containerPort:  9090
       imagePullSecrets:
