--- a/k8s/petclinic-chart/templates/api_gateway_ingress.yaml
+++ b/k8s/petclinic-chart/templates/api_gateway_ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "www.iniyor.net"
+  - host: {{ .Values.DNS_NAME }}
     http:
       paths:
       - path: /
