--- a/k8s/petclinic-chart/templates/customers_service_deployment.yaml
+++ b/k8s/petclinic-chart/templates/customers_service_deployment.yaml
@@ -20,7 +20,7 @@ spec:
         command: ['sh', '-c', 'until nc -z discovery-server:8761; do echo waiting for discovery-server; sleep 2; done;']
       containers:
       - name:  customers-service
-        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:customers-server-b5"
+        image:  {{ .Values.IMAGE_TAG_CUSTOMERS_SERVER }}
         ports:
         - containerPort:  8081
       imagePullSecrets:
