--- a/k8s/petclinic-chart/templates/discovery_server_deployment.yaml
+++ b/k8s/petclinic-chart/templates/discovery_server_deployment.yaml
@@ -20,7 +20,7 @@ spec:
         command: ['sh', '-c', 'until nc -z config-server:8888; do echo waiting for discovery-server; sleep 2; done;']
       containers:
       - name:  discovery-server
-        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:discovery-server-b5"
+        image:  {{ .Values.IMAGE_TAG_DISCOVERY_SERVER }}
         ports:
         - containerPort:  8761
       imagePullSecrets:
