--- a/k8s/petclinic-chart/templates/grafana_server_deployment.yaml
+++ b/k8s/petclinic-chart/templates/grafana_server_deployment.yaml
@@ -1,27 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  vets-service
+  name:  grafana-server
   labels:
-    app:  vets-service
+    app:  grafana-server
 spec:
   selector:
     matchLabels:
-      app: vets-service
+      app: grafana-server
   replicas: 1
   template:
     metadata:
       labels:
-        app:  vets-service
+        app:  grafana-server
     spec:
       initContainers:
       - name: init-discovery-server
         image: busybox
         command: ['sh', '-c', 'until nc -z discovery-server:8761; do echo waiting for discovery-server; sleep 2; done;']
       containers:
-      - name:  vets-service
-        image:  "654421006949.dkr.ecr.us-east-1.amazonaws.com/microservice-project:vets-service-b5"
+      - name:  grafana-server
+        image:  {{ .Values.IMAGE_TAG_GRAFANA_SERVER }}
         ports:
-        - containerPort:  8083
+        - containerPort:  3000
       imagePullSecrets:
       - name: regcred
