--- a/infrastructure/cluster.yaml
+++ b/infrastructure/cluster.yaml
@@ -7,7 +7,7 @@ metadata:
 
 vpc:
   subnets:
-    private:
+    public:
       us-east-1a: { id: subnet-046ba3345b061bfb3 }
       us-east-1b: { id: subnet-020fccc47b2d4612f }
       us-east-1c: { id: subnet-08264da9ae548bef6 }
