--- a/k8s/petclinic-chart/values_template.yaml
+++ b/k8s/petclinic-chart/values_template.yaml
@@ -8,4 +8,4 @@ IMAGE_TAG_VETS_SERVICE: "${IMAGE_TAG_VETS_SERVICE}"
 IMAGE_TAG_VISITS_SERVICE: "${IMAGE_TAG_VISITS_SERVICE}"
 IMAGE_TAG_GRAFANA_SERVER: "${IMAGE_TAG_GRAFANA_SERVER}"
 IMAGE_TAG_PROMETHEUS_SERVER: "${IMAGE_TAG_PROMETHEUS_SERVER}"
-DNS_NAME: www.iniyor.net
+DNS_NAME: www.iniyo.net
